--- a/Algebra/style.sty
+++ b/Algebra/style.sty
@@ -4,3 +4,4 @@
 \usepackage[spanish]{babel}
 \usepackage{amsfonts}
 \usepackage[a4paper, left=1in, right=1in, top=1in, bottom=1in]{geometry}
+\usepackage{multicol}
